ajuste de algumas paginas e listagem de produtos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
             - dados:/var/lib/postgresql/data
             - ./scripts:/scripts
             - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+        ports:
+            - "5432:5432"    
+        environment: 
+            POSTGRES_PASSWORD: docker
+            POSTGRES_USER: docker
     web:
         build: cestabasica
         command: python manage.py runserver 0.0.0.0:8000
